--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,16 +1,16 @@
 @font-face {
-  font-family: "Raleway-Regular";
-  src: url("../font/Raleway-Regular.ttf") format("ttf");
+  font-family: "Raleway Regular";
+  src: url("../font/Raleway-Regular.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "Raleway-Bold";
-  src: url("../font/Raleway-Bold.ttf") format("ttf");
+  font-family: "Raleway Bold";
+  src: url("../font/Raleway-Bold.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "Raleway-ExtraBold";
-  src: url("../font/Raleway-ExtraBold.ttf") format("ttf");
+  font-family: "Raleway ExtraBold";
+  src: url("../font/Raleway-ExtraBold.ttf") format("truetype");
 }
 
 body {
@@ -19,7 +19,7 @@ body {
 }
 
 * {
-  font-family: "Raleway-Bold";
+  font-family: "Raleway Regular";
 }
 
 .container {
@@ -36,7 +36,10 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  background-color: #fff;
   z-index: 65;
+  top: 0;
 }
 
 .nav-header ul {
@@ -53,14 +56,14 @@ header {
 
 .nav-header a {
   color: black;
-  font-weight: 500;
+  font-family: "Raleway Bold";
   text-decoration: none;
   font-size: 0.7em;
   padding: 25px 15px 0 15px;
 }
 .nav-header .subscribe {
   color: #0065fc;
-  font-weight: 700;
+  font-family: "Raleway Bold";
 }
 
 .nav-header a:hover {
@@ -70,14 +73,17 @@ header {
 
 /* recherche et filtre */
 
+.recherche-filtre {
+  margin-top: 80px;
+}
+
 .intro h1 {
   font-size: 1em;
-  font-weight: 700;
+  font-family: "Raleway ExtraBold";
 }
 
 .intro p {
   font-size: 0.7em;
-  font-weight: 500;
 }
 
 .recherche {
@@ -100,6 +106,7 @@ header {
   border: none;
   border-top-right-radius: 13px;
   border-bottom-right-radius: 13px;
+  font-family: "Raleway Bold";
 }
 
 .recherche .search {
@@ -109,14 +116,14 @@ header {
 }
 
 .filtres {
-  margin-top: 30px;
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .filtre {
-  margin-right: 40px;
+  margin: 30px 20px 0;
   border: 2px solid #e6e6e6;
   border-radius: 50px;
   position: relative;
@@ -126,15 +133,16 @@ header {
 
 .filtre-titre {
   margin-right: 40px;
+  margin: 30px 20px 0;
 }
 
 .filtre-titre span {
-  font-weight: 700;
+  font-family: "Raleway Bold";
   font-size: 0.7em;
 }
 
 .filtre span {
-  font-weight: 700;
+  font-family: "Raleway Bold";
   font-size: 0.7em;
   padding: 10px;
   margin-left: 30px;
@@ -184,6 +192,191 @@ header {
   margin-top: 20px;
 }
 
+/* hébergements */
+
+#hebergements {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 65px;
+  margin-top: -30px;
+}
+
+h2 {
+  font-size: 1em;
+  width: 100%;
+  padding: 10px 20px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.img-choix {
+  width: 190px;
+  height: 110px;
+  object-fit: cover;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.choix {
+  width: 25%;
+  height: 30%;
+  background-color: #fff;
+  margin: 20px;
+  border: 5px solid #fff;
+  border-radius: 20px;
+  box-shadow: 1px 2px 10px 5px #cfcfcf;
+  line-height: 3px;
+}
+
+.choix h4 {
+  font-size: 0.7em;
+  font-family: "Raleway Bold";
+  margin-left: 8px;
+}
+
+.choix p {
+  font-size: 0.6em;
+  margin-left: 8px;
+}
+
+.choix .etoiles {
+  margin: 0 8px 10px;
+}
+
+.etoiles .fas {
+  font-size: 15px;
+  color: #0065fc;
+}
+
+.etoiles .gris .fas {
+  color: #e6e6e6;
+}
+
+.liste-hebergement {
+  background-color: #f2f2f2;
+  width: 70%;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.plus {
+  font-size: 0.7em;
+  width: 100%;
+  font-family: "Raleway Bold";
+  padding: 10px 20px 30px;
+}
+
+.populaires {
+  background-color: #f2f2f2;
+  width: 28%;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.img-pop {
+  width: 100px;
+  height: 125px;
+  object-fit: cover;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+.pop {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 85%;
+  height: 21%;
+  background-color: #fff;
+  border: 5px solid #fff;
+  border-radius: 20px;
+  box-shadow: 1px 2px 10px 5px #cfcfcf;
+  line-height: 0.7em;
+}
+
+.pop h4 {
+  font-size: 0.7em;
+  font-family: "Raleway Bold";
+  margin: 0 10px;
+}
+
+.pop p {
+  font-size: 0.6em;
+  margin-left: 8px;
+}
+
+.pop .etoiles {
+  margin: 35px 8px 0;
+}
+
+/* activites */
+
+#activites {
+  width: 100%;
+  margin: 50px 0;
+  padding-top: 65px;
+  margin-top: -30px;
+}
+
+figure {
+  box-shadow: 1px 1px 15px 0px #cfcfcf;
+  border-radius: 20px;
+  position: relative;
+}
+
+.activite-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 400px;
+}
+
+.big {
+  width: 23%;
+  height: 100%;
+  margin: 0%;
+}
+.small {
+  width: 23%;
+  height: 45%;
+  margin: 0;
+}
+
+.big .img-activite {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.small .img-activite {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+figcaption {
+  height: 30px;
+  width: 100%;
+  background-color: #fff;
+  font-size: 0.7em;
+  font-family: "Raleway Bold";
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  position: absolute;
+  bottom: 0;
+}
+
 /* footer */
 
 footer {
@@ -212,7 +405,7 @@ footer li {
 
 footer h3 {
   font-size: 1em;
-  font-weight: bold;
+  font-family: "Raleway Bold";
 }
 
 .footer-liste {
