--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -29,17 +29,17 @@ body {
 
 /* header */
 
-header {
-  width: 100%;
+.responsive-header {
+  display: none;
+}
+
+.desktop {
   height: 65px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
   background-color: #fff;
-  z-index: 65;
-  top: 0;
 }
 
 .nav-header ul {
@@ -58,7 +58,7 @@ header {
   color: black;
   font-family: "Raleway Bold";
   text-decoration: none;
-  font-size: 0.7em;
+  font-size: 1em;
   padding: 25px 15px 0 15px;
 }
 .nav-header .subscribe {
@@ -74,7 +74,7 @@ header {
 /* recherche et filtre */
 
 .recherche-filtre {
-  margin-top: 80px;
+  margin-bottom: 35px;
 }
 
 .intro h1 {
@@ -115,15 +115,15 @@ header {
   width: 150px;
 }
 
-.filtres {
+.filtres,
+.bloc-filtre {
   display: flex;
   flex-direction: row;
-  align-items: center;
   flex-wrap: wrap;
 }
 
 .filtre {
-  margin: 30px 20px 0;
+  margin: 20px 30px 0 0;
   border: 2px solid #e6e6e6;
   border-radius: 50px;
   position: relative;
@@ -133,7 +133,7 @@ header {
 
 .filtre-titre {
   margin-right: 40px;
-  margin: 30px 20px 0;
+  margin: 30px 20px 0 0;
 }
 
 .filtre-titre span {
@@ -197,9 +197,8 @@ header {
 #hebergements {
   width: 100%;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  padding-top: 65px;
-  margin-top: -30px;
 }
 
 h2 {
@@ -210,23 +209,30 @@ h2 {
   justify-content: space-between;
 }
 
+#hebergements .vignette-clic {
+  text-decoration: none;
+  color: #000;
+  width: 100%;
+  height: 100%;
+  box-shadow: none;
+}
+
 .img-choix {
-  width: 190px;
-  height: 110px;
+  width: 99%;
+  height: 60%;
   object-fit: cover;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
 
 .choix {
-  width: 25%;
-  height: 30%;
   background-color: #fff;
-  margin: 20px;
   border: 5px solid #fff;
   border-radius: 20px;
   box-shadow: 1px 2px 10px 5px #cfcfcf;
   line-height: 3px;
+  height: 27%;
+  width: 26%;
 }
 
 .choix h4 {
@@ -267,7 +273,7 @@ h2 {
   font-size: 0.7em;
   width: 100%;
   font-family: "Raleway Bold";
-  padding: 10px 20px 30px;
+  padding: 0 20px;
 }
 
 .populaires {
@@ -280,25 +286,30 @@ h2 {
   justify-content: space-around;
 }
 
+.pop .vignette-clic {
+  display: flex;
+}
+
 .img-pop {
-  width: 100px;
-  height: 125px;
+  width: 40%;
+  height: 99%;
   object-fit: cover;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
 }
 
 .pop {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 85%;
-  height: 21%;
+  width: 80%;
+  height: 19%;
   background-color: #fff;
   border: 5px solid #fff;
   border-radius: 20px;
   box-shadow: 1px 2px 10px 5px #cfcfcf;
   line-height: 0.7em;
+}
+
+.pop div {
+  padding-top: 10px;
 }
 
 .pop h4 {
@@ -313,7 +324,7 @@ h2 {
 }
 
 .pop .etoiles {
-  margin: 35px 8px 0;
+  margin: 15px 8px 0;
 }
 
 /* activites */
@@ -321,14 +332,6 @@ h2 {
 #activites {
   width: 100%;
   margin: 50px 0;
-  padding-top: 65px;
-  margin-top: -30px;
-}
-
-figure {
-  box-shadow: 1px 1px 15px 0px #cfcfcf;
-  border-radius: 20px;
-  position: relative;
 }
 
 .activite-card {
@@ -337,44 +340,53 @@ figure {
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
-  height: 400px;
+  height: 470px;
+}
+
+.vignette-clic {
+  text-decoration: none;
+  border-radius: 20px;
+  box-shadow: 1px 1px 15px 0px #cfcfcf;
 }
 
 .big {
   width: 23%;
   height: 100%;
-  margin: 0%;
+  margin: 10px;
 }
+
 .small {
   width: 23%;
   height: 45%;
-  margin: 0;
+  margin: 10px;
+}
+
+.vignette-clic .card {
+  width: 100%;
+  height: 100%;
 }
 
 .big .img-activite {
   width: 100%;
-  height: 100%;
+  height: 90%;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
   object-fit: cover;
-  border-radius: 20px;
 }
 
 .small .img-activite {
   width: 100%;
-  height: 100%;
+  height: 80%;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
   object-fit: cover;
-  border-radius: 20px;
 }
 
-figcaption {
-  height: 30px;
-  width: 100%;
-  background-color: #fff;
-  font-size: 0.7em;
-  font-family: "Raleway Bold";
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  position: absolute;
-  bottom: 0;
+#activites h4 {
+  margin: 0;
+  font-size: 0.6em;
+  padding: 10px;
+  color: #000;
 }
 
 /* footer */
