--- a/css/styles.css
+++ b/css/styles.css
@@ -417,7 +417,7 @@ footer {
 footer .container {
   display: flex;
   flex-direction: row;
-  padding: 30px 0;
+  justify-content: space-between;
 }
 
 footer ul {
@@ -426,16 +426,17 @@ footer ul {
 
 footer li {
   list-style-type: none;
-  font-size: 0.7em;
   margin: 10px;
   margin-left: 0;
+  font-size: 0.7em;
+}
+
+footer a {
+  text-decoration: none;
+  color: #000;
 }
 
 footer h3 {
   font-size: 1em;
   font-family: "Raleway Bold";
-}
-
-.footer-liste {
-  margin-right: 100px;
 }
