--- a/css/styles.css
+++ b/css/styles.css
@@ -136,12 +136,13 @@ input {
 .filtre {
   margin: 20px 30px 0 0;
   border: 2px solid #e6e6e6;
+  background-color: #fff;
   border-radius: 50px;
   position: relative;
   padding: 8px;
   cursor: pointer;
   display: flex;
-  height: 25px;
+  height: 45px;
   align-items: center;
 }
 
@@ -157,7 +158,7 @@ input {
 
 .filtre span {
   font-family: "Raleway Bold";
-  font-size: 0.7em;
+  font-size: 0.8em;
   padding: 10px;
   margin-left: 30px;
 }
