--- a/css/styles2.css
+++ b/css/styles2.css
@@ -111,10 +111,7 @@
 @media screen and (max-width: 580px) {
   footer .container {
     display: block;
-  }
-  .footer-liste {
-    margin-right: 0;
-    margin-top: 30px;
+    padding: 20px 0;
   }
 }
 @media screen and (max-width: 450px) {
